GNOME Bugzilla – Bug 791720
Criticals in gio/xdp-dbus.h leading to crash under flatpak
Last modified: 2018-01-08 15:17:19 UTC
Geary Bug 791206 seems to be caused by an error in GXdpOpenURIProxy: Stack trace from running Geary from Flathub as follows: (geary:6): GLib-GIO-CRITICAL **: g_dbus_connection_signal_unsubscribe: assertion 'G_IS_DBUS_CONNECTION (connection)' failed Thread 1 "geary" received signal SIGTRAP, Trace/breakpoint trap. _g_log_abort (breakpoint=breakpoint@entry=1) at gmessages.c:554 554 } (gdb) bt
+ Trace 238267
Created attachment 365718 [details] [review] gopenuriportal: Fix mismatched types in callback The source object for this asynchronous operation is the GXdpOpenURI, not a GDBusConnection. This was causing crashes in method calls on the connection, unsurprisingly. Signed-off-by: Philip Withnall <withnall@endlessm.com>
Review of attachment 365718 [details] [review]: ACK-by: me
Pushed to master and glib-2-54, thanks for the review. Attachment 365718 [details] pushed as 692c8d1 - gopenuriportal: Fix mismatched types in callback
(In reply to Philip Withnall from comment #3) > Pushed to master and glib-2-54, thanks for the review. > It’s only in glib-2-54, and not in master.
I am not sure how that happened. I pulled the patch onto master, cherry-picked to glib-2-54, then ran `git bz push`, and somehow things silently went wrong. Thanks for spotting that. :-( Actually pushed to master this time.